# soft_matrix_gpu

./: .gitignore  Cargo.toml  LICENSE  README.md  shell.nix  upmix_batch.sh
src/: gpu.rs  main.rs
src/matrix/: ambisonic.rs  coherence.rs  default.rs  mod.rs  mvdr.rs
